# c-aducid

./: .gitignore  AUTHORS  COPYING  Doxyfile  Makefile.am  Makefile.in  Makefile.mingw  NEWS  README  README.md  build.bat  config.status  configure  configure.ac  libtool
doc/demos/login/: Makefile  css.ecpp  defs.h  login.ecpp  tntnet.xml
doc/demos/testing-app/: Makefile  css.ecpp  defs.h  ko.cpp  ok.cpp  testing-app.ecpp  tntnet.xml  verify.ecpp  verifytransaction.ecpp
doc/demos/write-attribute/: Makefile  bg.cpp  tntnet.xml  write-attribute.ecpp
msvcproject/libaducid/: libaducid.sln
msvcproject/libaducid/libaducid/: ReadMe.txt  libaducid.vcxproj  libaducid.vcxproj.filters
msvcproject/libaducid/libaducidpp/: ReadMe.txt  libaducidpp.vcxproj  libaducidpp.vcxproj.filters
msvcproject/libaducid/unittest/: ReadMe.txt  unittest.vcxproj  unittest.vcxproj.filters
src/: Makefile  aducid++.cc  aducid++.h  aducid.c  aducid.h  aducidprivate.h  aducidsoap.c  aducidsoap.h  aim.c  aim.h  attrlist.c  attrlist.h  build.bat  definitions.h  exuse.c  httpclient.c  httpclient.h  myxml.c  myxml.h  peig.c  soap.c  soap.h  textconstants.c  textconstants.h  utils.c  utils.h
src/msvcproject/libaducid/: libaducid.sln
src/msvcproject/libaducid/libaducid/: libalucid.vcxproj  libalucid.vcxproj.filters  stdafx.cpp
src/msvcproject/libaducid/libaducid_test/: libalucid_test.vcxproj  libalucid_test.vcxproj.filters
tests/: Makefile  test.c  test.h  unittests.cc
tools/: java-to-c-enums.pl  libaducid.pc  libaducid.spec
